Fix spacing in hero-section__container

--- a/style.css
+++ b/style.css
@@ -169,11 +169,20 @@ a:hover,
     margin: 30px 0 60px 140px;
 }
 
-.hero-section__text-container {
+.hero-section__container {
+    height: 100%;
     width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+}
+
+.hero-section__text-container {
+    padding-top: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: flex-start;
 }
 
@@ -198,7 +207,7 @@ a:hover,
 }
 
 .learn-more {
-    margin: 60px 0 120px 0;
+    margin: 60px 0 60px 0;
     color: var(--almost-white);
     background-color: var(--almost-black);
     border: 1px solid var(--almost-black);
